# sdlc-scaffold

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  LEARNINGS.md  README.md  copier.yml  pyproject.toml  ruff.toml  sync_version.py
.beads/: issues.jsonl  metadata.json
.github/workflows/: api-diff.yml  e2e.yml  pages.yml  release.yml  remote-smoke.yml
_partials/: agent_body.md.jinja
docs/: LEARNINGS.md  RULE_INVENTORY.md  SPEC.md  SPLIT.md  UNIT_TESTS.md  UPGRADING.md  archviz_layout_requirements.md  typed_class_graph_design.md
research/: NOTICE_BOARD.md
research/deep_dives/: 2026-07-16_interactive_archviz_libs.md  2026-07-17_ml_template_scaffold_comparison.md  2026-07-18_pyrefly_strict_integration.md  2026-07-18_python_callgraph_tools.md  2026-07-21_test_architecture_sota.md
sdlc-devtools/: .coverage  README.md  noxfile.py  pyproject.toml
sdlc-devtools/devtools/: __init__.py  _common.py  analytics.py  archmap.py  arrows.py  astgrep.py  calls.py  classes.py  complexity.py  composition.py  config.py  contracts.py  data_clumps.py  demeter.py  envy.py  graph.py  layout.py  lcom.py  magic_literals.py  mirror.py  names.py  omit.py  purity.py  pyproject.py  resolve.py  run.py  shape_contracts.py  small.py  state_candidates.py  trees.py
sdlc-devtools/devtools/archviz/: index.html.tmpl  layout.js  measure.cjs  viewer.js
sdlc-devtools/devtools/cohesion/: __init__.py  complexity.py  data_clumps.py  lcom.py  state_candidates.py
sdlc-devtools/devtools/coupling/: __init__.py  composition.py  contracts.py  demeter.py  envy.py  purity.py
sdlc-devtools/devtools/graph/: __init__.py  archmap.py  arrows.py  calls.py  classes.py  fitness.py
sdlc-devtools/devtools/hygiene/: __init__.py  magic_literals.py  mirror.py  small.py
sdlc-devtools/devtools/plumbing/: __init__.py  _common.py  cli.py  layout.py  omit.py  pyproject.py  resolve.py  trees.py
sdlc-devtools/devtools/primitives/: __init__.py
sdlc-devtools/devtools/sg-rules/: py-dynamic-attr.yml
sdlc-devtools/devtools/tools/: __init__.py  analytics.py  config.py
sdlc-devtools/docs/architecture/: graph.json
sdlc-devtools/tests/fixtures/: archviz_baseline.json
sdlc-devtools/tests/unit/devtools/: _common.py  analytics.py  archmap.py  archmap_schema.py  arrows.py  astgrep.py  calls.py  classes.py  cli.py  complexity.py  composition.py  config.py  contracts.py  data_clumps.py  demeter.py  engine_interface.py  envy.py  graph.py  layout.py  lcom.py  magic_literals.py  mirror.py  names.py  omit.py  purity.py  pyproject.py  resolve.py  run.py  shape_contracts.py  small.py  state_candidates.py  test__common.py  test_archmap.py  test_archmap_schema.py  test_arrows.py  test_astgrep.py  test_calls.py  test_classes.py  test_cli.py  test_complexity.py  (+11 more)
sdlc-devtools/tests/unit/devtools/cohesion/: complexity.py  data_clumps.py  lcom.py  state_candidates.py
sdlc-devtools/tests/unit/devtools/coupling/: composition.py  contracts.py  demeter.py  envy.py  purity.py
sdlc-devtools/tests/unit/devtools/graph/: archmap.py  archmap_schema.py  arrows.py  calls.py  classes.py  fitness.py
sdlc-devtools/tests/unit/devtools/hygiene/: magic_literals.py  mirror.py  small.py
sdlc-devtools/tests/unit/devtools/plumbing/: _common.py  cli.py  layout.py  names.py  omit.py  pyproject.py  resolve.py  trees.py
sdlc-devtools/tests/unit/devtools/primitives/: arrows.py  calls.py  classes.py
sdlc-devtools/tests/unit/devtools/tools/: analytics.py  config.py
template/: .copier-answers.yml.jinja  .gitattributes  .gitignore.jinja  .pre-commit-config.yaml.jinja  AGENTS.md.jinja  CLAUDE.md.jinja  README.md.jinja  noxfile.py.jinja  pyproject.toml.jinja
template/.github/workflows/: audit.yml.jinja  ci.yml.jinja  {% if archviz_pages %}pages.yml{% endif %}.jinja
template/core/: __init__.py.jinja  math_ops.py.jinja
template/devtools/: README.md.jinja  graph.py  lcom.py  magic_literals.py  state_candidates.py  {% if enable_astgrep %}sgconfig.yml{% endif %}.jinja  {% if enable_class_shape_smells %}data_clumps.py{% endif %}  {% if enable_class_shape_smells %}lcom.py{% endif %}  {% if enable_jscpd %}jscpd.json{% endif %}.jinja
template/devtools/sg-rules/: py-top-level-function.yml
template/devtools/{% if enable_astgrep %}sg-rules{% endif %}/: py-top-level-function.yml  py-top-level-side-effect.yml
template/docs/: PLAN.md.jinja  ROADMAP.md.jinja
template/tests/unit/: test_math_ops.py.jinja  test_pipeline.py.jinja
template/tests/viewer/: test_render.py.jinja
template/{% if has_viewer %}{{ viewer_name }}{% endif %}/: render.py.jinja
template/{{ package_name }}/: __init__.py.jinja  math_ops.py.jinja  pipeline.py.jinja
template/{{ viewer_name }}/: __init__.py.jinja
tests/: _meta.py  conftest.py  test_e2e.py
tests/e2e/: conftest.py  test_dogfood.py  test_e2e.py  test_remote_update.py
tests/e2e/seed/pkg/: errors.py.tmpl  math_ops.py.tmpl  memory_store.py.tmpl  pipeline.py.tmpl  repository.py.tmpl  service.py.tmpl  types.py.tmpl
tests/e2e/seed/tests/: errors.py.tmpl  memory_store.py.tmpl  pipeline.py.tmpl  repository.py.tmpl  service.py.tmpl  test_math_ops.py.tmpl  test_memory_store.py.tmpl  test_repository.py.tmpl  test_service.py.tmpl  types.py.tmpl
tests/end_to_end/: conftest.py  test_e2e.py
tests/unit/: conftest.py  test_devtools.py  test_scaffold_consistency.py  test_scaffold_lint.py  test_sync_version.py
