# The SCAFFOLD's own project file — for its E2E test suite ONLY. Not part of any generated project
# (copier renders `template/` only; this sits at the repo root). The E2E test drives copier + every
# gate as subprocesses, so the sole dependency is pytest; copier/ruff/vulture/nox/pre-commit are
# invoked through `uvx`/`uv run` at test time.
[project]
name = "sdlc-scaffold"
version = "0.1.0"
description = "Copier template for the personal-projects SDLC guardrail stack + its E2E test."
requires-python = ">=3.11"

# pytest drives the E2E (copier + gates as subprocesses); the devtools engines are their own package
# (sdlc-devtools/, tested there), so the scaffold's own suite needs only pytest. The dogfood e2e shells
# into the package's `uv run` for its gates.
[dependency-groups]
# jinja2: the unit suite RENDERS template/*.py.jinja and format-checks the result (bd y52), so a template
# whose OUTPUT drifts from ruff is caught in milliseconds instead of ~90s later in the e2e. copier itself
# runs via `uvx` in the e2e (an isolated tool env), so its jinja2 is not importable here — this is ours.
dev = ["pytest>=8", "jinja2>=3"]

# uv workspace: the repo is two products in one tree — the scaffold (this project) + the analyzer package
# (sdlc-devtools/). Declaring it a member gives one shared lock + in-place editable dev, and makes eventual
# extraction a one-line member removal (bd uo0). Generated consumer projects are NOT members — they pull the
# package by git-dep (the e2e overrides that to the local path), so the workspace only shapes local dev.
[tool.uv.workspace]
members = ["sdlc-devtools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -ra"
markers = ["slow: full generate+sync+gate runs (minutes)"]
