# sdlc-devtools — the structural-guardrail ANALYZERS of the sdlc-scaffold stack, as an installable
# package. Consumers depend on it by a git tag pin (see the scaffold's template/pyproject.toml.jinja):
#   devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@<tag>#subdirectory=sdlc-devtools
# so an engine change is a one-line pin bump in the consumer, NOT a re-vendored source diff. The engines
# import as `devtools` (unchanged CLI contract: `python -m devtools.graph`, etc.). The ast-grep rule data
# (sgconfig/sg-rules) + jscpd config are NOT here — they are filesystem config consumed by external CLIs
# by path, so they stay vendored in the scaffold template.
[project]
name = "sdlc-devtools"
version = "1.26.0"
description = "Structural-guardrail analyzers (import-graph arch-fitness, LCOM4, data-clumps, magic-literals, shape-contracts, archmap interactive autoviz) for the sdlc-scaffold stack."
requires-python = ">=3.12"
# graph.py builds the honest import graph on grimp + ranks it with networkx; the other engines are
# stdlib-only (ast). So the whole package's runtime footprint is these two.
dependencies = ["grimp", "networkx", "radon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The whole `devtools/` dir ships — including the ast-grep rules + the ast-grep/jscpd config DATA (consumed
# by external CLIs, located via `python -m devtools.config`), which hatchling includes alongside the .py.
packages = ["devtools"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -ra"
# REQUIRED by the mirror layout (bd 1a8). A mirror test file carries its MODULE's name, and pytest collects
# `test_*.py` by default — so without this the suite is not collected at all, and an uncollected suite is
# greener than a red one, which is the worst failure mode available. devtools.mirror's `misconfigured` check
# fails the gate whenever these two disagree, because a silently-uncollected suite must not look clean.
python_files = ["*.py"]
# The convention is `test_<method>` FUNCTIONS (docs/UNIT_TESTS.md) — there are no test classes. Left at the
# default, pytest tries to collect any imported `Test*` class as one: `TestLayout` is a production class and
# collecting it is meaningless. Empty says what is true here rather than warning about it on every run.
python_classes = []

# The analyzer package holds itself to the gate set it ships (bd iv5), so its structural config lives here
# by hand rather than being rendered from the template — it cannot be a copier consumer of itself.
[tool.structure]
# The mirror (bd 1a8): `devtools/purity.py` is covered by `tests/unit/devtools/purity.py`. Same name, so
# what a test file covers is VISIBLE in its path instead of reconstructed by the reader. The only other
# value is "off" — a lenient variant would be the rule meaning something different here, which the o70 union
# law rejects.
test_layout = "mirror"

# Dependency hygiene (bd 85l.2): deptry flags imported-but-undeclared (DEP001), declared-but-unused
# (DEP002), and transitive (DEP003). noxfile.py imports the `nox` runner (invoked via uvx, intentionally
# undeclared) so it's excluded; test files legitimately import the dev-dep pytest (DEP004 ignored there).
# The analyzer package holds itself to the gate set it ships (bd iv5). It cannot be a copier consumer of
# itself, so the config is mirrored here by hand rather than rendered — which is exactly why it drifted:
# a gate that does not run is indistinguishable from a clean codebase.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Any opts out of the type system. Name the real type, or a TypedDict/Protocol at a JSON boundary." }

# The house width. ABSENT until now, so `ruff format` silently used its own default (88) while the rest of
# the repo is 120 — and devtools' select omitted E501, so no gate ever noticed the disagreement. Wiring
# `ruff format --check` (bd iv5) without this would have enforced the WRONG width, which is worse than the
# absent gate it replaced: it produces churn that looks like compliance.
[tool.ruff]
line-length = 120

[tool.pyrefly]
preset = "strict"
check-unannotated-defs = true
search-path = ["."]
python-version = "3.12"  # MUST equal requires-python above — pyrefly does not infer it (bd 166)
# radon ships no py.typed/stubs. A declared FACT at a dependency boundary, not a defect — the
# same slot the template gives consumers for their untyped deps.
ignore-missing-imports = ["radon.complexity"]

[[tool.pyrefly.sub-config]]
matches = "**/tests/**"
check-unannotated-defs = false

[tool.coverage.run]
source = ["devtools"]
# >>> LOCAL-SLOT: coverage-omit — non-unit-testable shells. The per-engine `main()` CLI wrappers are argparse
# plumbing exercised by the e2e, not by unit tests; bd 0y9 collapses them into one home, at which point this
# slot shrinks to that one file.
omit = ["devtools/archviz/*"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.deptry]
extend_exclude = ["noxfile.py"]

[tool.deptry.per_rule_ignores]
DEP004 = ["tests"]
